Revert "Fixed bounce animation, removed horizontal scroll, and changed bike parking availability charts' title"
This reverts commit 86d399267af5b5639d427ee0c1c10cb8631ed7b2.

--- a/Flask/static/Style.css
+++ b/Flask/static/Style.css
@@ -287,7 +287,6 @@ body
     color: #333;
     height: 80vh;
     overflow-y: auto;
-    overflow-x: hidden;
 }
 
 /* styling for station name container */
